Add a rectangle with a hole SVG and alter the SVGLoader example to use it.  Notice that the hole is missing.

--- a/examples/webgl_loader_svg.html
+++ b/examples/webgl_loader_svg.html
@@ -73,7 +73,7 @@
 				//
 
 				var loader = new THREE.SVGLoader();
-				loader.load( 'models/svg/tiger.svg', function ( paths ) {
+				loader.load( 'models/svg/tests/8.svg', function ( paths ) {
 
 					var group = new THREE.Group();
 					group.scale.multiplyScalar( 0.25 );
